# foundry

./: .gitignore  .hone-gates.json  AGENTS.md  BACKLOG.md  CHANGELOG.md  CHARTER.md  Cargo.toml  IMPLEMENTATION_PLAN.md  deny.toml  install.sh  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml  docs.yml  release.yml
audit/: maintain-2026-04-15-062359-actions.md  maintain-2026-04-18-055317-actions.md  maintenance-takeover-audit.md  missing-gateway-traits-actions.md  missing-gateway-traits-plan.md  missing-gateway-traits.md
book/: AGENTS.md  book.toml
book/src/: SUMMARY.md  charter.md  introduction.md
book/src/architecture/: concepts.md  crates.md  event-model.md  task-blocks.md
book/src/guide/: emitting-events.md  getting-started.md  iteration-workflow.md  maintenance-workflow.md  registry.md  strategic-iteration.md  throttle.md  vulnerability-remediation.md  workflow-formations.md  writing-task-blocks.md
book/src/reference/: cli.md  event-types.md  grpc.md
crates/foundry-cli/: Cargo.toml
crates/foundry-cli/src/: commands.rs  gates_commands.rs  init_commands.rs  main.rs  registry_commands.rs
crates/foundry-core/: Cargo.toml
crates/foundry-core/src/: event.rs  gates.rs  lib.rs  loop_context.rs  paths.rs  payload.rs  registry.rs  task_block.rs  throttle.rs  trace.rs  work_block.rs  workflow.rs
crates/foundryd/: Cargo.toml  build.rs
crates/foundryd/src/: charter.rs  engine.rs  event_writer.rs  gate_file.rs  gate_runner.rs  gateway.rs  main.rs  orchestrator.rs  scanner.rs  service.rs  shell.rs  summary.rs  trace_store.rs  trace_writer.rs  workflow_tracker.rs
crates/foundryd/src/blocks/: assess_project.rs  audit.rs  audit_main_branch.rs  audit_release_tag.rs  check_charter.rs  check_pipeline.rs  cleanup_branches.rs  create_plan.rs  direct_prompt.rs  execute_maintain.rs  execute_plan.rs  generate_summary.rs  git_ops.rs  greet.rs  hone_common.rs  hone_iterate.rs  hone_maintain.rs  install.rs  iterate_chain_test.rs  macros.rs  maintain_chain_test.rs  mod.rs  prompt_chain_test.rs  release.rs  release_chain_test.rs  remediate.rs  remediate_pipeline.rs  resolve_gates.rs  retry_execution.rs  route_gate_result.rs  route_project.rs  route_validation_result.rs  run_preflight_gates.rs  run_verify_gates.rs  scan.rs  scout_drift.rs  strategic_assess.rs  strategic_chain_test.rs  strategic_loop.rs  summarize_result.rs  (+4 more)
launchd/: README.md  com.mojility.foundry-maintenance.plist  com.mojility.foundryd.plist
proto/: foundry.proto
scripts/: README.md  deprecation-bridge.sh  migrate-event-names.sh
skill/foundry/: SKILL.md
skill/foundry/evals/: evals.json
skill/foundry/references/: event-model.md  workflows.md
