[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Stacey Vetzal <stacey@vetzal.com>"]
license = "MIT"

[workspace.dependencies]
# Shared across crates
foundry-core = { path = "crates/foundry-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing (deterministic event IDs)
sha2 = "0.10"
hex = "0.4"

# Testing
tempfile = "3"
