[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.11.2"
edition = "2024"
rust-version = "1.85"
authors = ["Stacey Vetzal <stacey@vetzal.com>"]
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# Shared across crates
foundry-core = { path = "crates/foundry-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# gRPC
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing (deterministic event IDs)
sha2 = "0.11"
hex = "0.4"

# Unique identifiers
uuid = { version = "1", features = ["v4"] }

# Async stream utilities
async-stream = "0.3"

# TUI
comfy-table = "7"

# Enum derive utilities
strum = { version = "0.28", features = ["derive"] }

# Macro utilities
pastey = "0.2"

# Semver parsing
semver = "1"

# Testing
tempfile = "3"
