[package]
name = "foundry-core"
description = "Shared types for Foundry — events, task blocks, throttle, and workflow definitions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
